<resources>
    <string name="app_name">My Weather App</string>
    <string name="city_name">St. Paul, MN</string>
    <string name="current_temp">%s&#xb0;</string>
    <string name="feel">Feels like %d&#xb0;</string>
    <string name="low">Low %d&#xb0;</string>
    <string name="high">High %d&#xb0;</string>
    <string name="humidity">Humidity %d%%</string>
    <string name="pressure">Pressure %d hPa</string>
    <string name="forecast">FORECAST</string>
    <string name="item_sunrise">Sunrise: %sam</string>
    <string name="item_sunset">Sunset: %spm</string>
    <string name="item_temp">Temp: %.0f°</string>
    <string name="item_high">High: %.0f°</string>
    <string name="item_low">Low: %.0f°</string>
    <string name="get_weather_for_my_location">Get Weather for My Location</string>
</resources>