<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/city_name"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/current_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/current_temp"
        android:textSize="90sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city_name" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="50dp"
        android:importantForAccessibility="no"
        android:src="@drawable/sun_icon"
        app:layout_constraintBottom_toBottomOf="@id/current_temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/current_temp" />

    <TextView
        android:id="@+id/feel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feel"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/current_temp"
        app:layout_constraintTop_toBottomOf="@id/current_temp" />

    <TextView
        android:id="@+id/low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/low"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feel" />

    <TextView
        android:id="@+id/high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/low"
        app:layout_constraintTop_toBottomOf="@id/low" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/high"
        app:layout_constraintTop_toBottomOf="@id/high" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/humidity"
        app:layout_constraintTop_toBottomOf="@id/humidity" />

    <Button
        android:id="@+id/forecastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forecast"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>